[package]
name = "kvs"
version = "0.1.0"
authors = ["pokhanto"]
description = "A key-value store"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
clap = {version ="4.5.5", features = ["cargo", "derive"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
crossbeam-skiplist = "0.1.3"
tokio = { version = "1.41.0", features = ["full"] }
pin-project = "1.1.6"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures-util = "0.3.31"
rand = {version = "0.8.5", features = ["small_rng"]}
nix = { version = "0.29.0", features = ["uio"] }
console-subscriber = "0.4.1"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.2"
rand = {version = "0.8.5", features = ["small_rng"]}
tempfile = "3.13.0"
walkdir = "2.5.0"
crossbeam-utils = "0.8.20"
panic-control = "0.1.4"
